--- a/style.css
+++ b/style.css
@@ -90,3 +90,98 @@ body {
   border-radius: 5px;
   transition: all 0.3s ease;
 }
+/* tabe*/
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .nav-links {
+    width: 40vw;
+    font-size: 2vw;
+    align-items: end;
+    
+  }
+
+  .logo {
+    height: 8vh;
+    width: 12vw;
+  }
+}
+
+/* phone */
+@media screen and (max-width: 768px) {
+  .navbar {
+    padding: 3vw;
+  }
+
+  .logo {
+    height: 10vh;
+    width: 15vw;
+  }
+
+  .nav-links {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 60vw;
+    padding: 5vw;
+    padding-top: 15vh;
+    background-color: #bebcbc;
+    font-size: 7vw;
+    flex-direction: column;
+    align-items: end;
+    transform: translateX(100%);
+    transition: transform 0.4s ease-in-out;
+    display: flex;
+    z-index: 99;
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  .nav-links.active {
+    animation: slideIn 0.4s forwards ease-in-out;
+    pointer-events: auto;
+  }
+
+  .nav-links.exit {
+    animation: slideOut 0.4s forwards ease-in-out;
+    pointer-events: none;
+  }
+  .hamburger {
+    display: flex;
+  }
+
+  .hamburger.toggle span:nth-child(1) {
+    transform: rotate(45deg) translate(5.7px, 5.7px);
+    background-color: #000;
+  }
+
+  .hamburger.toggle span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.toggle span:nth-child(3) {
+    transform: rotate(-45deg) translate(5.7px, -5.7px);
+    background-color: #000;
+  }
+
+  @keyframes slideIn {
+    from {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(0%);
+      opacity: 1;
+    }
+  }
+
+  @keyframes slideOut {
+    from {
+      transform: translateX(0%);
+      opacity: 1;
+    }
+    to {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+  }
+}
